<resources>
    <string name="app_name">CrowdPlay</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="tracks_c">Tracks:</string>
    <string name="guests_c">Guests:</string>
    <string name="artist">Artist</string>
    <string name="add_image" translatable="false">addImage</string>
    <string name="delete_image" translatable="false">deleteImage</string>
    <string name="thumbnail" translatable="false">thumbnail</string>

    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="title_activity_party_finder" translatable="false">Map</string>
    <string name="title_party_setup">Setup Party</string>
    <string name="party_name">Name</string>
    <string name="party_code">Password</string>
    <string name="start_party">START NEW PARTY</string>
    <string name="no_search_results">No Search Results Found</string>

    <string name="delete_party">Delete Party?</string>
    <string name="enter_password">Enter Password for Party</string>
    <string name="choose_name">Choose a name for your Party!</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="need_facebook_login">You need to be logged in with Facebook to use CrowdPlay</string>
    <string name="login_error">Login Error</string>
    <string name="ask_for_password">If you dont know the password, ask your host for it</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="allow_location">You can not use the app without allowing permissions to location</string>
    <string name="PlaylistTab" translatable="false">Playlist</string>
    <string name="SearchTab">Search</string>

    // Facebook
    <string name="facebook_app_id" translatable="false">1911910362363575</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1911910362363575</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="facebook_login_find_parties">You need to be logged in with Facebook to find parties</string>
    <string name="facebook_login_start_party">You need to be loggid in with Facebook to start a party</string>
    <string name="location_not_found">Sorry, we could not find your location</string>
    <string name="location_permissions_needed">Cant use the app without allowing permissions to location</string>
    <string name="login_success">Login Successful</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_facebookname">Welcome</string>


</resources>
