<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:layout_marginTop="1dp"
    android:background="@color/colorPrimaryLight"
    card_view:cardCornerRadius="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkBackground"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingBottom="2dp">

        <ImageView
            android:id="@+id/img_album"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/thumb_1_0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_margin="7dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimeryText"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="0.32" />

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="10dp"
                android:text="@string/artist"
                android:textColor="@color/colorPrimeryText"
                android:textSize="15sp"
                android:textStyle="italic" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">


            <ImageView
                android:id="@+id/img_add"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:contentDescription="@string/delete_image"
                android:foregroundGravity="center"
                android:src="@drawable/ic_add4"
                android:tint="@color/colorSecondary" />


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>