<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/img_album"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/thumb_1_0" />

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:maxHeight="36dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimeryText"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="7dp"
                android:text="@string/artist"
                android:textColor="@color/colorPrimeryText"
                android:textSize="15dp"
                android:textStyle="italic" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvVotes"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="7"
            android:textAlignment="center"
            android:textColor="@color/colorPrimeryText"
            android:textSize="30dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabUpvote"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            card_view:fabSize="mini"
            card_view:srcCompat="@drawable/upvote_icon" />


    </LinearLayout>

</android.support.v7.widget.CardView>