<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_album"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="7dp"
        android:contentDescription="@string/thumbnail"
        android:src="@drawable/thumb_1_0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="198dp"
        android:layout_height="32dp"
        android:layout_margin="7dp"
        android:text="@string/title"
        android:textColor="@color/colorPrimeryText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toRightOf="@+id/img_album"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:text="@string/artist"
        android:textColor="@color/colorPrimeryText"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintLeft_toRightOf="@+id/img_album"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabUpvote"
        android:layout_width="50dp"
        android:layout_height="53dp"
        android:layout_weight="1"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvVotes"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvVotes"
        android:layout_width="44dp"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:text="7"
        android:textAlignment="center"
        android:textColor="@color/colorPrimeryText"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@+id/tvTitle"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp" />

</android.support.constraint.ConstraintLayout>